<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.com.oldtimeraudio.justjava.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/cream_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_cream_edit_text"
            android:inputType="textCapSentences|textAutoCorrect"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_marginBottom="16dp"
            android:text="@string/toppings_text_view_value"
            style="@style/HeaderTextStyle"/>

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:checked="false"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream_check_box"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/chocolate_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:checked="false"
            android:paddingLeft="24dp"
            android:text="@string/chocolate_cream_check_box"
            android:textSize="16sp"/>

        <TextView
            android:layout_marginBottom="16dp"
            android:text="@string/quantity_text_view_name"
            style="@style/HeaderTextStyle"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/quantity_negative_button_name"
                android:textAllCaps="true"
                />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/quantity_text_view_value"
                style="@style/HeaderTextStyle"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/quantity_positive_button_name"
                android:textAllCaps="true"
                />

            </LinearLayout>

        <!--

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/price_text_view_name"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/price_text_view_value"
            android:textColor="#000000"
            android:textSize="16sp" />

        -->

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/button_name"
            android:textAllCaps="true" />

    </LinearLayout>
</ScrollView>

